--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Five'"
+                onclick="location.href='./project-internship.html?title=Project%20Five'"
               >
                 Explore
               </button>
@@ -244,7 +244,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Three'"
+                onclick="location.href='./project-internship.html?title=Project%20Three'"
               >
                 Explore
               </button>
@@ -263,7 +263,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20One'"
+                onclick="location.href='./project-internship.html?title=Project%20One'"
               >
                 Explore
               </button>
@@ -282,7 +282,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Five'"
+                onclick="location.href='./project-internship.html?title=Project%20Five'"
               >
                 Explore
               </button>
@@ -301,7 +301,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Three'"
+                onclick="location.href='./project-internship.html?title=Project%20Three'"
               >
                 Explore
               </button>
@@ -320,7 +320,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20One'"
+                onclick="location.href='./project-internship.html?title=Project%20One'"
               >
                 Explore
               </button>
@@ -340,7 +340,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Two'"
+                onclick="location.href='./project-university.html?title=Project%20Two'"
               >
                 Explore
               </button>
@@ -359,7 +359,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Four'"
+                onclick="location.href='./project-university.html?title=Project%20Four'"
               >
                 Explore
               </button>
@@ -378,7 +378,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Six'"
+                onclick="location.href='./project-university.html?title=Project%20Six'"
               >
                 Explore
               </button>
@@ -461,7 +461,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='./project-university.html?title=Project%20One'"
               >
                 Explore
               </button>
@@ -480,7 +480,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='./project.html?title=Project%20Two'"
               >
                 Explore
               </button>
@@ -499,7 +499,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='./project-university.html?title=Project%20Three'"
               >
                 Explore
               </button>
@@ -518,7 +518,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='./project.html?title=Project%20Four'"
               >
                 Explore
               </button>
@@ -537,7 +537,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='./project-university.html?title=Project%20Five'"
               >
                 Explore
               </button>
@@ -556,7 +556,7 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='./project.html?title=Project%20Six'"
               >
                 Explore
               </button>
@@ -569,7 +569,7 @@
             </div>
             <h2 class="skills-sub-title project-title">Project One</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20One'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20One'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
@@ -578,7 +578,7 @@
             </div>
             <h2 class="skills-sub-title project-title">Project Two</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Two'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Two'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
@@ -587,7 +587,7 @@
             </div>
             <h2 class="skills-sub-title project-title">Project Three</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Three'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Three'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
@@ -596,7 +596,7 @@
             </div>
             <h2 class="skills-sub-title project-title">Project Four</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Four'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Four'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
@@ -605,7 +605,7 @@
             </div>
             <h2 class="skills-sub-title project-title">Project Five</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Five'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Five'">Explore</button>
             </div>
           </div>
           <div class="details-container color-container project-card">
@@ -614,7 +614,7 @@
             </div>
             <h2 class="skills-sub-title project-title">Project Six</h2>
             <div class="btn-container">
-              <button class="btn btn-color-2 project-btn" onclick="location.href='./project.html?title=Project%20Six'">Explore</button>
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project-university.html?title=Project%20Six'">Explore</button>
             </div>
           </div>
         </div>
