--- a/project-internship.html
+++ b/project-internship.html
@@ -38,20 +38,7 @@
             <br /><br />
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
           </p>
-          <div class="btn-container">
-            <button
-              class="btn btn-color-2"
-              onclick="window.open('https://github.com/', '_blank')"
-            >
-              GitHub
-            </button>
-            <button
-              class="btn btn-color-2"
-              onclick="window.open('#', '_blank')"
-            >
-              Live Demo
-            </button>
-          </div>
+          <!-- No buttons for Internship Projects -->
         </div>
       </div>
     </section>
