--- a/project-university.html
+++ b/project-university.html
@@ -45,12 +45,7 @@
             >
               GitHub
             </button>
-            <button
-              class="btn btn-color-2"
-              onclick="window.open('#', '_blank')"
-            >
-              Live Demo
-            </button>
+            <!-- Live Demo button removed -->
           </div>
         </div>
       </div>
