--- a/index.html
+++ b/index.html
@@ -221,11 +221,11 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project One</h2>
+            <h2 class="skills-sub-title project-title">ODA Deployment</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-internship.html?title=Project%20Five'"
+                onclick="location.href='./project_1.html'"
               >
                 Explore
               </button>
@@ -336,11 +336,11 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project One</h2>
+            <h2 class="skills-sub-title project-title">ODA Deployment</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-university.html?title=Project%20Two'"
+                onclick="location.href='./project_1.html'"
               >
                 Explore
               </button>
