--- a/project_1.html
+++ b/project_1.html
@@ -35,9 +35,6 @@
                 <div class="swiper-slide"><img src="./projects/Project_1/1.png" alt="Project Image 1" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_1/2.png" alt="Project Image 2" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_1/3.png" alt="Project Image 3" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_1/1.png" alt="Project Image 1" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_1/2.png" alt="Project Image 2" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_1/3.png" alt="Project Image 3" /></div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -128,14 +125,15 @@
         coverflowEffect: {
           rotate: 0,
           stretch: 0,
-          depth: 100,
-          modifier: 2.5,
-          slideShadows: true,
+          depth: 150,
+          modifier: 1,
+          slideShadows: false,
         },
         autoplay: {
           delay: 2500,
           disableOnInteraction: false,
         },
+        speed: 600,
         pagination: {
           el: ".swiper-pagination",
           clickable: true,
