Project_1_wt_images

--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">ODA Deployment</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: BOC</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">BOC</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
