--- a/index.html
+++ b/index.html
@@ -241,11 +241,12 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Two</h2>
+            <h2 class="skills-sub-title project-title">Nutanix Private Cloud</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Registrar Office DC</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-internship.html?title=Project%20Three'"
+                onclick="location.href='./project_2.html'"
               >
                 Explore
               </button>
@@ -260,11 +261,12 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Three</h2>
+            <h2 class="skills-sub-title project-title">NetBackup Migration</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: CDB</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-internship.html?title=Project%20One'"
+                onclick="location.href='./project_3.html'"
               >
                 Explore
               </button>
@@ -279,11 +281,12 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Four</h2>
+            <h2 class="skills-sub-title project-title">Infrastructure Maintenance</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: HNB</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-internship.html?title=Project%20Five'"
+                onclick="location.href='./project_4.html'"
               >
                 Explore
               </button>
@@ -298,11 +301,12 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Five</h2>
+            <h2 class="skills-sub-title project-title">Exadata Migration</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Amana Bank</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-internship.html?title=Project%20Three'"
+                onclick="location.href='./project_5.html'"
               >
                 Explore
               </button>
@@ -317,12 +321,64 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Six</h2>
+            <h2 class="skills-sub-title project-title">Flex Appliance Upgrade</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: INSEE Cement</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-internship.html?title=Project%20One'"
+                onclick="location.href='./project_6.html'"
               >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 7"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Commvault Backup Solution</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: NDB</p>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_7.html'">
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 8"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Server Placement</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Dialog Axiata</p>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_8.html'">
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 9"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Hardware Maintenance</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: SLT</p>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_9.html'">
                 Explore
               </button>
             </div>
@@ -357,11 +413,12 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Two</h2>
+            <h2 class="skills-sub-title project-title">Nutanix Private Cloud</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Registrar Office DC</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-university.html?title=Project%20Four'"
+                onclick="location.href='./project_2.html'"
               >
                 Explore
               </button>
@@ -376,11 +433,12 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Three</h2>
+            <h2 class="skills-sub-title project-title">NetBackup Migration</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: CDB</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-university.html?title=Project%20Six'"
+                onclick="location.href='./project_3.html'"
               >
                 Explore
               </button>
@@ -395,11 +453,12 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Four</h2>
+            <h2 class="skills-sub-title project-title">Infrastructure Maintenance</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: HNB</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Two'"
+                onclick="location.href='./project_4.html'"
               >
                 Explore
               </button>
@@ -433,12 +492,64 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Six</h2>
+            <h2 class="skills-sub-title project-title">Flex Appliance Upgrade</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: INSEE Cement</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Six'"
+                onclick="location.href='./project_6.html'"
               >
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-1.png"
+                alt="Project 7"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Commvault Backup Solution</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: NDB</p>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_7.html'">
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-2.png"
+                alt="Project 8"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Server Placement</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Dialog Axiata</p>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_8.html'">
+                Explore
+              </button>
+            </div>
+          </div>
+          <div class="details-container color-container project-card">
+            <div class="article-container">
+              <img
+                src="./assets/project-3.png"
+                alt="Project 9"
+                class="project-img"
+                data-speed="0.02"
+              />
+            </div>
+            <h2 class="skills-sub-title project-title">Hardware Maintenance</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: SLT</p>
+            <div class="btn-container">
+              <button class="btn btn-color-2 project-btn" onclick="location.href='./project_9.html'">
                 Explore
               </button>
             </div>
@@ -535,11 +646,12 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Five</h2>
+            <h2 class="skills-sub-title project-title">Exadata Migration</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Amana Bank</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project-university.html?title=Project%20Five'"
+                onclick="location.href='./project_5.html'"
               >
                 Explore
               </button>
