--- a/project_9.html
+++ b/project_9.html
@@ -32,7 +32,7 @@
             <!-- Swiper -->
             <div class="swiper projectSwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./projects/Project_9/1.png" alt="Project Image 1" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_9/1.heic" alt="Project Image 1" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_9/2.png" alt="Project Image 2" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_9/3.png" alt="Project Image 3" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_9/1.png" alt="Project Image 1" /></div>
