--- a/index.html
+++ b/index.html
@@ -205,10 +205,10 @@
   <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
 </section>
     <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
+      <p class="section__text__p1" data-aos="fade-right" data-aos-once="false">Browse My Recent</p>
+      <h1 class="title" data-aos="fade-left" data-aos-once="false">Projects</h1>
       
-      <h2 class="skills-sub-title project-category-title">Internship Projects</h2>
+      <h2 class="skills-sub-title project-category-title" data-aos="fade-up" data-aos-once="false">Internship Projects</h2>
       <div class="project-slider-container" data-aos="fade-up" data-aos-once="true">
         <div class="project-slider-track">
           <!-- 6 Projects -->
@@ -222,7 +222,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">ODA Deployment</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: BOC</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">BOC</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -242,7 +242,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Nutanix Private Cloud</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Registrar Office DC</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Registrar General Department</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -262,7 +262,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">NetBackup Migration</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: CDB</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">CDB</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -281,8 +281,8 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Infrastructure Maintenance</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: HNB</p>
+            <h2 class="skills-sub-title project-title">Banking Systems Migration</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">HNB</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -302,7 +302,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Exadata Migration</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Amana Bank</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Amana Bank</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -321,8 +321,8 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Flex Appliance Upgrade</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: INSEE Cement</p>
+            <h2 class="skills-sub-title project-title">Flex Appliance Issue</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">INSEE Cement</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -342,7 +342,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Commvault Backup Solution</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: NDB</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">NDB</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_7.html'">
                 Explore
@@ -358,8 +358,8 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Server Placement</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Dialog Axiata</p>
+            <h2 class="skills-sub-title project-title">Infrastructure Expansion</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Dialog Axiata</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_8.html'">
                 Explore
@@ -376,7 +376,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Hardware Maintenance</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: SLT</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">SLT</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_9.html'">
                 Explore
@@ -414,7 +414,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Nutanix Private Cloud</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Registrar Office DC</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Registrar General Department</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -434,7 +434,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">NetBackup Migration</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: CDB</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">CDB</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -453,8 +453,8 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Infrastructure Maintenance</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: HNB</p>
+            <h2 class="skills-sub-title project-title">Banking Systems Migration</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">HNB</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -473,11 +473,12 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Project Five</h2>
+            <h2 class="skills-sub-title project-title">Exadata Migration</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Amana Bank</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='./project.html?title=Project%20Four'"
+                onclick="location.href='./project_5.html'"
               >
                 Explore
               </button>
@@ -492,8 +493,8 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Flex Appliance Upgrade</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: INSEE Cement</p>
+            <h2 class="skills-sub-title project-title">Flex Appliance Issue</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">INSEE Cement</p>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -513,7 +514,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Commvault Backup Solution</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: NDB</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">NDB</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_7.html'">
                 Explore
@@ -529,8 +530,8 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Server Placement</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: Dialog Axiata</p>
+            <h2 class="skills-sub-title project-title">Infrastructure Expansion</h2>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Dialog Axiata</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_8.html'">
                 Explore
@@ -547,7 +548,7 @@
               />
             </div>
             <h2 class="skills-sub-title project-title">Hardware Maintenance</h2>
-            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">Client: SLT</p>
+            <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">SLT</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_9.html'">
                 Explore
@@ -557,7 +558,7 @@
         </div>
       </div>
 
-      <h2 class="skills-sub-title project-category-title">University Projects</h2>
+      <h2 class="skills-sub-title project-category-title" data-aos="fade-up" data-aos-once="false">University Projects</h2>
       <div class="project-slider-container" data-aos="fade-up" data-aos-once="true">
         <div class="project-slider-track">
           <!-- 6 Projects -->
