--- a/project_4.html
+++ b/project_4.html
@@ -156,5 +156,13 @@
         loop: true,
       });
     </script>
+
+    <!-- Project Navigation -->
+    <div class="project-nav nav-prev" onclick="location.href='./project_3.html'">
+      <img src="./assets/arrow.png" alt="Previous Project" />
+    </div>
+    <div class="project-nav nav-next" onclick="location.href='./project_5.html'">
+      <img src="./assets/arrow.png" alt="Next Project" />
+    </div>
   </body>
 </html>
