--- a/project_1.html
+++ b/project_1.html
@@ -141,5 +141,13 @@
         loop: true,
       });
     </script>
+
+    <!-- Project Navigation -->
+    <div class="project-nav nav-prev" onclick="location.href='./project_9.html'">
+      <img src="./assets/arrow.png" alt="Previous Project" />
+    </div>
+    <div class="project-nav nav-next" onclick="location.href='./project_2.html'">
+      <img src="./assets/arrow.png" alt="Next Project" />
+    </div>
   </body>
 </html>
