--- a/project_3.html
+++ b/project_3.html
@@ -138,5 +138,13 @@
         loop: true,
       });
     </script>
+
+    <!-- Project Navigation -->
+    <div class="project-nav nav-prev" onclick="location.href='./project_2.html'">
+      <img src="./assets/arrow.png" alt="Previous Project" />
+    </div>
+    <div class="project-nav nav-next" onclick="location.href='./project_4.html'">
+      <img src="./assets/arrow.png" alt="Next Project" />
+    </div>
   </body>
 </html>
