--- a/project_6.html
+++ b/project_6.html
@@ -146,5 +146,13 @@
         loop: true,
       });
     </script>
+
+    <!-- Project Navigation -->
+    <div class="project-nav nav-prev" onclick="location.href='./project_5.html'">
+      <img src="./assets/arrow.png" alt="Previous Project" />
+    </div>
+    <div class="project-nav nav-next" onclick="location.href='./project_7.html'">
+      <img src="./assets/arrow.png" alt="Next Project" />
+    </div>
   </body>
 </html>
