--- a/project_7.html
+++ b/project_7.html
@@ -150,5 +150,13 @@
         loop: true,
       });
     </script>
+
+    <!-- Project Navigation -->
+    <div class="project-nav nav-prev" onclick="location.href='./project_6.html'">
+      <img src="./assets/arrow.png" alt="Previous Project" />
+    </div>
+    <div class="project-nav nav-next" onclick="location.href='./project_8.html'">
+      <img src="./assets/arrow.png" alt="Next Project" />
+    </div>
   </body>
 </html>
