--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project_5.jpg"
                 alt="Project 5"
                 class="project-img"
                 data-speed="0.02"
@@ -467,7 +467,7 @@
           <div class="details-container color-container project-card">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/project_5.jpg"
                 alt="Project 5"
                 class="project-img"
                 data-speed="0.02"
