--- a/project_5.html
+++ b/project_5.html
@@ -32,12 +32,9 @@
             <!-- Swiper -->
             <div class="swiper projectSwiper">
               <div class="swiper-wrapper">
-                <div class="swiper-slide"><img src="./projects/Project_5/1.png" alt="Project Image 1" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_5/1.jpg" alt="Project Image 1" /></div>
                 <div class="swiper-slide"><img src="./projects/Project_5/2.png" alt="Project Image 2" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_5/3.png" alt="Project Image 3" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_5/1.png" alt="Project Image 1" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_5/2.png" alt="Project Image 2" /></div>
-                <div class="swiper-slide"><img src="./projects/Project_5/3.png" alt="Project Image 3" /></div>
+                <div class="swiper-slide"><img src="./projects/Project_5/3.jpg" alt="Project Image 3" /></div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
