--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Banking Systems Migration</h2>
+            <h2 class="skills-sub-title project-title">Banking System Migration</h2>
             <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">HNB</p>
             <div class="btn-container">
               <button
@@ -341,7 +341,7 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Commvault Backup Solution</h2>
+            <h2 class="skills-sub-title project-title">Commvault Backup</h2>
             <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">NDB</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_7.html'">
@@ -453,7 +453,7 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Banking Systems Migration</h2>
+            <h2 class="skills-sub-title project-title">Banking System Migration</h2>
             <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">HNB</p>
             <div class="btn-container">
               <button
@@ -513,7 +513,7 @@
                 data-speed="0.02"
               />
             </div>
-            <h2 class="skills-sub-title project-title">Commvault Backup Solution</h2>
+            <h2 class="skills-sub-title project-title">Commvault Backup</h2>
             <p style="font-size: 0.9rem; margin-top: -0.8rem; margin-bottom: 1rem;">NDB</p>
             <div class="btn-container">
               <button class="btn btn-color-2 project-btn" onclick="location.href='./project_7.html'">
