--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <div class="about-details-container" data-aos="fade-left" data-aos-once="true">
           <div class="about-containers-edu-gap">
-            <div class="details-container box-work" data-aos="fade-up" data-aos-once="true" onclick="window.open('#', '_blank')">
+            <div class="details-container box-work" data-aos="fade-up" data-aos-once="true" onclick="window.open('https://drive.google.com/file/d/1AqmF3kxTU6ZBYJdUTbCtViLo30trsXpg/view?usp=share_link', '_blank')">
               <div class="link-icon-container">
                 <img src="./assets/link-icon.svg" alt="Link icon" class="link-icon" />
               </div>
