--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
     </nav>
     <section id="profile" data-aos="fade-up" data-aos-once="true">
       <div class="section__pic-container" data-aos="fade-right" data-aos-once="true">
-        <img src="./assets/profile-pic.png" alt="Navindu Sirimanna profile picture" data-speed="0.12" />
+        <img src="./assets/profile-pic.png" alt="Navindu Sirimanna profile picture" />
       </div>
       <div class="section__text" data-aos="fade-left" data-aos-once="true">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Navindu Sirimanna</h1>
-        <p class="section__text__p2">DevOps Engineer</p>
+        <!-- <p class="section__text__p2">DevOps Engineer</p> -->
+        <p class="section__text__p2">ELECTRONIC AND TELECOMMUNICATION ENGINEERING UNDERGRADUATE - UOM</p>
         <div class="btn-container">
           <button
             class="btn btn-color-2"
@@ -196,7 +197,7 @@
         <div class="article-container">
           <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Unity</h3><p>Advanced</p></div></article>
           <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>Blender</h3><p>Intermediate</p></div></article>
-          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>C#</h3><p>Intermediate</p></div></article>
+          <article><img src="./assets/checkmark.png" alt="icon" class="icon" /><div><h3>C# (Game Dev)</h3><p>Intermediate</p></div></article>
         </div>
       </div>
 
